how to set alpha

--- a/market.tex
+++ b/market.tex
@@ -206,9 +206,9 @@ Set
 \]
 The rescaling parameter $\alpha>0$ can be chosen \emph{a priori} based on $P$ such that: $ E[\sum \rho_i] < E[r|c(s,P)] - E[r|c(P)] $. 
 
-%\NDP{TODO spell out how. This seems like it should be just algebra, for exmaple if aprior I expect 10 complementary signals which combined produce a expected surplus of 1 then i want to have $g = \alpha pi$ and $\alpha < 1/10$. How can we make this procedure generic? }
+ $\alpha =    \frac{E[r|c(s,P)] - E[r|c(P)] )}{\sum \pi_i}  $. 
 
-
+%\NDP{TODO spell out how. This seems like it should be just algebra, for exmaple if aprior I expect 10 complementary signals which combined produce a expected surplus of 2 then i want to have $g = \alpha pi$ and $\alpha < 2/10$. How can we make this procedure generic? }
 
 \end{mech}
 
